# elfextract

./: README.md  pyproject.toml
elfextract/: __init__.py  main.py
